[package]
name = "mint-nft-skytrade"
version = "0.1.0"
description = "Sky trade nft collection mint"
edition = "2021"
authors = ["Ugochukwu Okoro <ugdesmond@gmail.com>"]


[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft_skytrade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
solana-program = "=1.14.13"
mpl-bubblegum = { version = "0.7.0", features=["cpi"] }
winnow="=0.4.1"
toml_datetime="=0.6.1"
anchor-spl = {version = "0.26.0",features = ["metadata"]}
spl-account-compression = { version="0.1.8", features = ["cpi"] }



