[package]
name = "mint-nft-skytrade"
version = "0.1.0"
description = "Sky trade nft collection mint"
edition = "2021"
authors = ["Ugochukwu Okoro <ugdesmond@gmail.com>"]
rust-version = "1.75"



[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft_skytrade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
mpl-bubblegum = "1.2.0"
anchor-spl = {version = "0.29.0", features = ["metadata"]}
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
solana-program = "1.5.1"





